--- a/packages.html
+++ b/packages.html
@@ -36,7 +36,6 @@
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
 </head>
-
 <header class="main-header">
 
     <div class="container">
@@ -69,7 +68,7 @@
                 <div class="hdr_r">
                     <ul>
                         <!--<li><a href=""><i class="far fa-user"></i> <span>My Account</span></a></li>-->
-                        <li><a href="tel:(213) 835-3220"><i class="far fa-phone"></i><span>(213) 835-3220</a></li>
+                        <li><a href="tel:(213) 357-3613"><i class="far fa-phone"></i><span>(213) 357-3613</a></li>
                     </ul>
                 </div>
                 <div class="menu-Bar">
@@ -81,7 +80,6 @@
         </div>
     </div>
 </header>
-
 <main id="main-content">
     <section class="mainBanner mb-3">
         <div class="mb_0">
@@ -264,9 +262,9 @@
                 </div>
             </div>
         </div>
-        <div class="sf_4">
+        <!-- <div class="sf_4">
             <img src="assets/images/payment-methods.png" width="145px" alt="" class="img-fluid">
-        </div>
+        </div> -->
         <div class="ftr_btm">
             <p>© Copyright 2023 Trademark Urban. Trademark Urban is a private legal firm that connects and employs attorneys from throughout the United States. Trademark Urban specializes in copyright and trademark services. Terms of Services and Privacy Policy.</p>
         </div>
