--- a/trademark-monitoring.html
+++ b/trademark-monitoring.html
@@ -45,27 +45,27 @@
             <div class="row align-items-center">
                 <div class="col-3">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="" width="100" height="100">
+                        <img src="assets/images/trademark-saviours-logo.png" alt="" height="100">
                     </a>
                 </div>
                 <div class="col-9 d-flex justify-content-end justify-content-xl-between align-items-center">
                     <div class="menuWrap">
+                        
                         <ul class="menu">
+                            <li><a href="index.html">Home</a></li>
                             <li class="dropdown-nav"><a href="#">Services</a>
                                 <ul class="dropdown sub-menu">
                                     <li><a href="trademark-registration.html">Trademark Registration</a></li>
-                                    <li><a href="comprehensive-search.html">Comprehensive Search</a></li>
-                                    <li><a href="trademark-monitoring.html">Trademark Monitoring</a></li>
-                                    <li><a href="trademark-search.html">Trademark Search</a></li>
+                                    <li><a href="comprehensive-search.html">Trademark Comprehensive</a></li>
                                     <li><a href="copyright-registration.html">Copyright Registration</a></li>
-                                    <li><a href="office-action-response.html">Office Action Response</a></li>
-
+                                    <li><a href="trademark-monitoring.html">Trademark Monitoring</a></li>
+                                    <li><a href="registration-form.html">Registration Form</a></li>
                                 </ul>
                             </li>
+                            <li><a href="/packages.html">Packages</a></li>
                             <li><a href="about-us.html">About Us</a></li>
+                            <li><a href="#">Contact</a></li>
                             <li><a href="faqs.html">FAQs</a></li>
-                            <li><a href="our-guarantee.html">Our Guarantee</a></li>
-                            <li><a href="registration-form.html">Registration Form</a></li>
                         </ul>
                     </div>
                     <div class="hdr_r">
@@ -93,9 +93,9 @@
                 <h1>Trademark Monitoring</h1>
                 <p>Keep your brand safe with our advanced trademark monitoring services.</p>
                 <div class="btn_group">
-                    <a href="javascript:;" data-toggle="modal" data-target="#exampleModalCenter" class="theme-btn">Get
+                    <a href="registration-form.html" data-toggle="modal" data-target="#exampleModalCenter" class="theme-btn">Get
                                         started</a>
-                    <a href="#howits" class="theme-btn outlined_btn">Learn More</a>
+                    <!-- <a href="#howits" class="theme-btn outlined_btn">Learn More</a> -->
                 </div>
             </div>
         </section>
@@ -289,22 +289,16 @@
 
 
     <footer class="site-footer" style="background:#555 url(assets/images/footer-bg.jpg); background-blend-mode: hard-light;">
-        <div class="container">
+        <div class="container overlay-footer">
             <div class="row">
                 <div class="col-lg-4">
                     <div class="sf_1">
                         <a href="index.html" class="logo">
-                            <img src="assets/images/logo-footer.png" alt="" >
+                            <img src="assets/images/trademark-saviours-logo.png" alt="" >
                         </a>
                         <p>We work hard to protect your brand at affordable rates. Our proven standardized process
                             minimizes the chances of application rejection, and optimizes your application for success.
                         </p>
-                        <ul class="social">
-                            <li><a href="https://www.linkedin.com/company/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        </ul>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -314,11 +308,10 @@
                                 <p>Services</p>
                                 <ul>
                                     <li><a href="trademark-registration.html">Trademark Registration</a></li>
-                                    <li><a href="comprehensive-search.html">Comprehensive Search</a></li>
+                                    <li><a href="comprehensive-search.html">Trademark Comprehensive Search</a></li>
                                     <li><a href="trademark-monitoring.html">Trademark Monitoring</a></li>
-                                    <li><a href="trademark-search.html">Trademark Search</a></li>
                                     <li><a href="copyright-registration.html">Copyright Registration</a></li>
-                                    <li><a href="office-action-response.html">Office Action Response</a></li>
+                                    <li><a href="registration-form.html">Resgistration Form</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -328,23 +321,21 @@
                                 <ul>
                                     <li><a href="about-us.html">About us</a></li>
                                     <li><a href="faqs.html">FAQs</a></li>
-                                                                        <li><a href="our-guarantee.html">Our Guarantee</a></li>
+                                    <li><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="sf_2 sf_3">
                                 <p>Contact Us</p>
-                                <a href="javascript:void(Tawk_API.toggle())" class="chat_btn"><i class="fal fa-comment-dots"></i>LIVE CHAT</a>
                                 <a href="" class="call_btn"><i class="fa fa-compass"></i>
                                     <span>
-                                                                                <strong>1014 Broadway,#255, Santa Monica, CA 90401</strong>
+                                                                                <strong>610 S Broadway Los Angeles, CA 90014</strong>
                                     </span>
                                 </a>
-                                <a href="tel:(213) 835-3220" class="call_btn"><i class="fa fa-phone"></i>
+                                <a href="tel:(213) 357-3613" class="call_btn"><i class="fa fa-phone"></i>
                                     <span>
-                                        <small>Mon-Fri 7AM to 7PM</small>
-                                        <strong>(213) 835-3220</strong>
+                                        <strong>(213) 357-3613</strong>
                                     </span>
                                 </a>
                                 
@@ -358,7 +349,7 @@
                 <img src="assets/images/payment-methods.png" width="145px" alt="" class="img-fluid">
             </div>
             <div class="ftr_btm">
-                <p>Copyright © 2023 Trademarks and Patent. All Rights Reserved.</p>
+                <p>© Copyright 2023 Trademark Urban. Trademark Urban is a private legal firm that connects and employs attorneys from throughout the United States. Trademark Urban specializes in copyright and trademark services. Terms of Services and Privacy Policy.</p>
             </div>
         </div>
     </footer>
